crates/nexus-macros/tests/macro_compile_fail/exhaustiveness_missing_variant.stderr
error[E0004]: non-exhaustive patterns: `&OrderEvent::Cancelled` not covered
  --> tests/macro_compile_fail/exhaustiveness_missing_variant.rs:24:15
   |
24 |         match event {
   |               ^^^^^ pattern `&OrderEvent::Cancelled` not covered
   |
note: `OrderEvent` defined here
  --> tests/macro_compile_fail/exhaustiveness_missing_variant.rs:8:6
   |
 8 | enum OrderEvent {
   |      ^^^^^^^^^^
...
11 |     Cancelled, // new variant added
   |     --------- not covered
   = note: the matched value is of type `&OrderEvent`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
26 ~             OrderEvent::Shipped => self.status = "shipped".into(),
27 ~             &OrderEvent::Cancelled => todo!(),
   |
